# docrag

./: .gitignore  =2.8  COMPLEX_QUERY_ANALYSIS.md  CONTRIBUTING.md  EMAIL_EXTRACTOR_PLAN.md  ENHANCED_RAG_IMPLEMENTATION.md  EXTRACTOR_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_CONSTRAINT_QUERY_REQUIREMENTS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_COMPLETE.md  README.md  config.test.yaml  demo_enhanced_metadata.py  demo_phase2.py  demo_verbose_logging.py  kg_implementation_demo.py  package.json  requirements.txt  setup.py  setup_openai.py  temp_cli_scripts_implementation.md  temp_config_review_copilot_fix_30.md  test_intent_fix.py  test_kg_end_to_end.py  test_phase3_simple.py  test_phase3_standalone.py  test_synthesis_fix.py  verbose_output.txt
backend/: README.md  __init__.py  failure_analysis_detailed.py  failure_analysis_updated.py  final_status.py  final_success_report.py  final_test_report.py  fix_imports.py  fix_test_imports.py  knowledge_graph_demo.py  main.py  pyproject.toml  quick_wins_success_report.py  remaining_test_fixes.py  requirements.txt  setup.py  setup_project.py  skipped_tests_analysis.py  status_report.py  test_config.py  test_summary.py  ultimate_success_report.py  update_test_expectations.py  updated_status.py  validate_phase4.py
backend/docs/: ARCHITECTURE.md  EMAIL_PROCESSING.md  PDF_PROCESSING.md  PHASE2_README.md  README.md
backend/examples/: DOCUMENT_DISCOVERY_FIX.md  demo_agent.py  demo_enhanced_metadata.py  demo_phase2.py  demo_phase3.py  phase4_demo.py  test_cli_integration.py  validate_agentic_implementation.py
backend/ingestion/: pipeline.py
backend/querying/: __init__.py  api.py
backend/shared/: __init__.py  config.py  logging_config.py  utils.py
backend/src/: README.md  __init__.py  main.py
backend/tests/: __init__.py  test_agent_framework.py  test_agentic_architecture.py  test_api_integration.py  test_cli_integration.py  test_config.py  test_config_paths.py  test_config_paths_simple.py  test_document_discovery.py  test_enhanced_agent.py  test_enhanced_metadata.py  test_enhanced_semantic_search.py  test_enhanced_vector_store.py  test_imports.py  test_integration_logic.py  test_kg_end_to_end.py  test_kg_implementation_fixes.py  test_knowledge_graph_integration.py  test_migration.py  test_mock_enhanced_vector_store.py  test_performance.py  test_phase3.py  test_phase3_agent.py  test_phase4_features.py  test_plugin.py  test_progress_update.py  (+2 more)
(+182 files in other folders)
